fixed 4th diamond that was covered with the box shadow of a different diamond

--- a/components/highlights.scss
+++ b/components/highlights.scss
@@ -48,6 +48,7 @@
       .Highlight__wrapper:nth-child(4){
         top: 580px;
         @include lightGradientBg(circle at bottom right);
+        z-index: 11;
       }
       .Highlight__wrapper {
         @include media("<desktop") {
